wstepna struktura projektu